WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
111822
Infinite loop due to bad use tree cycle detection
https://bugs.webkit.org/show_bug.cgi?id=111822
Summary
Infinite loop due to bad use tree cycle detection
Philip Rogers
Reported
2013-03-07 22:49:07 PST
We can infinite loop during use tree cycle detection with ids containing capital letters. The bug is conveniently labeled with a fixme!
http://trac.webkit.org/browser/trunk/Source/WebCore/svg/SVGUseElement.cpp?annotate=blame#L672
Testcase: <svg> <g id="R"> <use id="test" xlink:href="#R"> </svg> Original bug: crbug.com/181016
Attachments
Prevent infinite loop
(3.44 KB, patch)
2013-03-07 23:22 PST
,
Philip Rogers
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Philip Rogers
Comment 1
2013-03-07 23:22:16 PST
Created
attachment 192158
[details]
Prevent infinite loop
Stephen Chenney
Comment 2
2013-03-08 06:34:25 PST
Comment on
attachment 192158
[details]
Prevent infinite loop Look good to me. R=me.
WebKit Review Bot
Comment 3
2013-03-08 06:40:07 PST
Comment on
attachment 192158
[details]
Prevent infinite loop Clearing flags on attachment: 192158 Committed
r145216
: <
http://trac.webkit.org/changeset/145216
>
WebKit Review Bot
Comment 4
2013-03-08 06:40:10 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug