Prevent infinite loop in SVG use cycle detection https://bugs.webkit.org/show_bug.cgi?id=111822

Reviewed by Stephen Chenney.

Source/WebCore:

SVG use cycle detection depended on idForStyleResolution() which differs from
getIdAttribute() in quirks mode. During use tree cycle detection, this difference
resulted in an infinite loop because idForStyleResolution() used lower-cased id
attributes. This patch removes an existing fixme for this and switches to using
getIdAttribute().

Test: svg/custom/use-cycle-detection.html

* svg/SVGUseElement.cpp:
(WebCore::SVGUseElement::hasCycleUseReferencing):

LayoutTests:

* svg/custom/use-cycle-detection-expected.html: Added.
* svg/custom/use-cycle-detection.html: Added.


Canonical link: https://commits.webkit.org/130201@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@145216 268f45cc-cd09-0410-ab3c-d52691b4dbfc